# movie-site

api/: pyproject.toml
api/migrations/: env.py
api/migrations/versions/: 3c7b83fccd4b_add_ratings_data_to_movie_table.py  c852f91c5050_add_movie_user_and_review_tables.py
api/movie_site/: db.py  graphql.py  main.py  session.py
ui/: package-lock.json  package.json
ui/public/: index.html
ui/src/: App.js  MovieDetail.js  MovieList.js  index.js  router.js
